--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -1,7 +1,11 @@
+$theme-color: #FFB6C1;
+
 form {
     border: 1px solid #545454;
     border-radius: 3px;
     padding: 40px;
+    background-color: $theme-color;
+
 }
 
 input {
