further changes to html and js files

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -2,20 +2,18 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Test</title>
+        <title>Using NLP to evaluate news articles</title>
     </head>
-
     <body>
-
         <header>
-            <div class="">
-                Logo
+            <div class="header">
+                Evaluating News Articles
             </div>
-            <div class="">
-                navigation
+            <div class="title">
+                <h2>Aylien API</h2>
+                <p>AYLIEN leverages Artificial Intelligence to empower thousands of forward-thinking enterprises and developers to collect, analyze, and understand vast amounts of human-generated content.</p>
             </div>
         </header>
-
         <main>
             <section>
                 <form class="" onsubmit="return Client.handleSubmit(event)">
@@ -26,12 +24,17 @@
 
             <section>
                 <strong>Form Results:</strong>
-                <div id="results"></div>
+                <div id="results">
+                    <div id="polarity">Polarity: </div>
+                    <div id="subjectivity">Subjectivity: </div>
+                    <div id="confidence">Confidence</div>
+                    <div id=""></div>
+                </div>
             </section>
         </main>
 
         <footer>
-            <p>This is a footer</p>
+            <p><u>Udacity NLP Project Four</u></p>
         </footer>
         <script>
             // Check that service workers are supported
