--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -17,18 +17,18 @@
         <main>
             <section>
                 <form class="" onsubmit="return Client.handleSubmit(event)">
-                    <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
+                    <input id="url_main" type="text" name="input" value="" onblur="onBlur()" placeholder="Enter a URL">
                     <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
             <section>
 
-            <section>
+            <section id="results">
                 <strong>Form Results:</strong>
                 <div id="results">
                     <div id="polarity">Polarity: </div>
                     <div id="subjectivity">Subjectivity: </div>
                     <div id="confidence">Confidence</div>
-                    <div id=""></div>
+                    <div id="text">Text: </div>
                 </div>
             </section>
         </main>
