added test files

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -22,7 +22,7 @@
                 </form>
             <section>
 
-            <section id="results">
+            <section id="return">
                 <strong>Form Results:</strong>
                 <div id="results">
                     <div id="polarity">Polarity: </div>
