--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -17,7 +17,7 @@
         <main>
             <section>
                 <form class="" onsubmit="return Client.handleSubmit(event)">
-                    <input id="url_main" type="text" name="input" value="" onblur="onBlur()" placeholder="Enter a URL">
+                    <input id="url_main" type="text" name="input" value="" placeholder="Enter a URL">
                     <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
             <section>
